--- a/src/OptiXPathTracer/CMakeLists.txt
+++ b/src/OptiXPathTracer/CMakeLists.txt
@@ -70,6 +70,8 @@ OPTIX_add_sample_executable( optixPathTracer target_name
   decisionTree/classTree_common.h
   decisionTree/classTree_host.h
   decisionTree/classTree_device.h
+
+  dropOutTracing_common.h
   OPTIONS -rdc true
   )
   
