--- a/src/OptiXPathTracer/CMakeLists.txt
+++ b/src/OptiXPathTracer/CMakeLists.txt
@@ -67,6 +67,7 @@ OPTIX_add_sample_executable( optixPathTracer target_name
   PG_host.h
   pathControl.h
   trainingParams.h
+  tester.h
   decisionTree/classTree_common.h
   decisionTree/classTree_host.h
   decisionTree/classTree_device.h
