--- a/src/OptiXPathTracer/CMakeLists.txt
+++ b/src/OptiXPathTracer/CMakeLists.txt
@@ -66,7 +66,7 @@ OPTIX_add_sample_executable( optixPathTracer target_name
   PG_common.h
   PG_host.h
   pathControl.h
-  trainingParams.h
+  DOT_PG_trainingParams.h
   decisionTree/classTree_common.h
   decisionTree/classTree_host.h
   decisionTree/classTree_device.h
