修正rnd,dirty的引入了curand库和内容,选择和原lcg兼容形式,在部分情况下使用防止和lcg耦合

--- a/src/OptiXPathTracer/CMakeLists.txt
+++ b/src/OptiXPathTracer/CMakeLists.txt
@@ -50,7 +50,8 @@ OPTIX_add_sample_executable( optixPathTracer target_name
 
   cuProg.h
   raygen.cu
-
+  rand.cu
+  
   stb_image.h
   stb_image.cpp
   material_parameters.h
